# attn-program-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt  train_grpo_torch.py
env/: __init__.py  attention_env.py  data.py  executor.py  reward.py
grpo/: __init__.py  core.py  hf_policy.py  program_dsl.py  rewarding.py  toy_data.py  toy_policy.py  train.py
notebooks/: modal_qwen3_demo.ipynb  model_run_latest.ipynb  real_heads_experiment.ipynb
scripts/: __init__.py  build_prompt.py  extract_attention_maps.py  grpo_train.py
tests/: __init__.py  test_env.py  test_grpo_torch.py
