[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "attn-program-rl"
version = "0.1.0"
description = "RL over attention-head program synthesis with a from-scratch PyTorch GRPO trainer, extending Hayes, Li & Andreas (2026)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "torch>=2.2",
]

[project.optional-dependencies]
# Only needed for the HF causal-LM backend and real attention extraction.
# The env, the reward, and the toy GRPO trainer need nothing beyond the core.
hf = [
    "transformers>=4.44",
    "datasets>=2.20",
    "trl>=1.0",
    "accelerate>=0.33",
]
dev = ["pytest>=7"]

[project.scripts]
attn-grpo = "train_grpo_torch:main"

[tool.setuptools]
packages = ["env", "grpo", "scripts"]
py-modules = ["train_grpo_torch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
